...
          'assets/images/logo_insta.svg',
          color: Colors.black,
          height: 52.0,
        ),
        const SizedBox(height: 24),
        TextField(
          key: const ValueKey('emailSignUpField'),
          controller: username,
          decoration: InputDecoration(
            labelText: translation(context).name_input_field,
            border: OutlineInputBorder(
              borderSide: Divider.createBorderSide(context),
            ),
...
            filled: true,
            contentPadding: const EdgeInsets.all(8),
          ),
        ),
        const SizedBox(height: 24),
        TextField(
          key: const ValueKey('passwordSignUpField'),
          obscureText: _isObscure,
          controller: password,
          decoration: InputDecoration(
            labelText: translation(context).pass_input_field,
            border: OutlineInputBorder(
              borderSide: Divider.createBorderSide(context),
...
