...
  "forgot_login": "Forgot your login details?",
  "get_help": " Get help logging in.",
  "or": "  OR  ",
  "log_in_with_fb": " Log in with Facebook",
  "dont_have_acc": "Don't have an account",
  "sign_up": " Sign up.",
  "sign_up_option": "Sign up with email or phone number",
  "already_have_acc": "Already have an account?",
  "sign_up_log_in": " Log in.",
  "phone": "PHONE",
  "email": "EMAIL",
  "next": "NEXT",
  "sign_up_info": "You may receive SMS notifications from us for security and login purposes.",
...
